--- a/elysia-bun/apps/web/package.json
+++ b/elysia-bun/apps/web/package.json
@@ -1,25 +1,25 @@
 {
 	"name": "web",
-	"version": "0.1.0",
-	"private": true,
+	"type": "module",
 	"scripts": {
-		"dev": "PORT=3005 next dev",
-		"build": "next build",
-		"start": "next start"
-	},
-	"dependencies": {
-		"backend-api": "workspace:../../packages/backend-api",
-		"react": "latest",
-		"react-dom": "latest",
-		"next": "latest"
+		"dev": "vinxi dev",
+		"build": "vinxi build",
+		"start": "vinxi start"
 	},
 	"devDependencies": {
-		"typescript": "latest",
-		"@types/react": "latest",
-		"@types/node": "latest",
-		"@types/react-dom": "latest",
-		"autoprefixer": "latest",
-		"postcss": "latest",
-		"tailwindcss": "latest"
+		"@types/bun": "latest",
+		"@types/react": "^19.0.2",
+		"@types/react-dom": "^19.0.2",
+		"@vitejs/plugin-react": "^4.3.4"
+	},
+	"peerDependencies": {
+		"typescript": "^5.7.2"
+	},
+	"dependencies": {
+		"@tanstack/react-router": "^1.92.6",
+		"@tanstack/start": "^1.92.6",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"vinxi": "^0.5.1"
 	}
 }
