--- a/elysia-bun/apps/backend/package.json
+++ b/elysia-bun/apps/backend/package.json
@@ -1,12 +1,14 @@
 {
 	"name": "backend",
-	"version": "1.0.50",
+	"version": "0.0.0",
+	"main": "./src/index.ts",
 	"scripts": {
 		"build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile server ./src/index.ts",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "bun run --watch src/index.ts"
 	},
 	"dependencies": {
+		"@elysiajs/cors": "^1.2.0",
 		"@elysiajs/opentelemetry": "^1.2.0",
 		"@elysiajs/swagger": "^1.2.0",
 		"elysia": "latest"
