--- a/elysia-bun/apps/web/package.json
+++ b/elysia-bun/apps/web/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@tanstack/react-router": "^1.92.6",
 		"@tanstack/start": "^1.92.6",
+		"backend-client": "workspace:*",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"vinxi": "^0.5.1"
