--- a/elysia-bun/package.json
+++ b/elysia-bun/package.json
@@ -12,11 +12,16 @@
 		"lint": "biome lint .",
 		"lint:fix": "biome lint --apply .",
 		"format": "biome format .",
-		"format:fix": "biome format --write ."
+		"format:fix": "biome format --write .",
+		"db:generate": "cd packages/db && bun run generate",
+		"db:push": "cd packages/db && bun run push",
+		"db:seed": "cd packages/db && bun run seed",
+		"db:studio": "cd packages/db && bun run studio"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.2.2",
-		"concurrently": "^6.5.1"
+		"@biomejs/biome": "1.9.4",
+		"concurrently": "^9.1.1",
+		"dotenv-cli": "^8.0.0"
 	},
 	"trustedDependencies": [
 		"@biomejs/biome",
