--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"conventionalCommits.scopes": ["pokemon-vote-ui", "elysia-bun"]
+	"conventionalCommits.scopes": ["pokemon-vote-ui", "elysia-bun", "db"]
 }
