--- a/elysia-bun/.env.example
+++ b/elysia-bun/.env.example
@@ -1,2 +1,3 @@
-DATABASE_URL="file:./local.db"
+ROOT_DIR=/absolute/path/to/root
+DATABASE_URL="file:$ROOT_DIR/packages/db/local.db"
 SESSION_SECRET="super-duper-s3cret"
