--- a/elysia-bun/apps/backend/package.json
+++ b/elysia-bun/apps/backend/package.json
@@ -5,9 +5,11 @@
 	"scripts": {
 		"build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile server ./src/index.ts",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "bun run --watch src/index.ts"
+		"dev": "bun with-env --watch src/index.ts",
+		"with-env": "bun --env-file=../../.env --bun"
 	},
 	"dependencies": {
+		"@acme/db": "workspace:*",
 		"@elysiajs/cors": "^1.2.0",
 		"@elysiajs/opentelemetry": "^1.2.0",
 		"@elysiajs/swagger": "^1.2.0",
