--- a/elysia-bun/apps/web/package.json
+++ b/elysia-bun/apps/web/package.json
@@ -7,10 +7,14 @@
 		"start": "vinxi start"
 	},
 	"devDependencies": {
+		"@acme/tailwind-config": "workspace:*",
 		"@types/bun": "latest",
 		"@types/react": "^19.0.2",
 		"@types/react-dom": "^19.0.2",
-		"@vitejs/plugin-react": "^4.3.4"
+		"@vitejs/plugin-react": "^4.3.4",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.49",
+		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"peerDependencies": {
 		"typescript": "^5.7.2"
